--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body style="margin:0px;padding:0px;background:#000000;overflow-y: hidden;">
-<img src="../index/pic.jpg" width="100%" height="100%" />
+<img src="img/pic.jpg" width="100%" height="100%" />
 </body>
 <ml>
 
